--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,7 @@ link:hover {
 
 .address-contact {
   font-family: Roboto;
+  font-style: normal;
   font-size: 14px;
   line-height: 24px;
   color: var(--text-description-color);
