--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  font-family: "Roboto" "sans-serif";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   color: var(--text-color);
 }
